2010-03-20  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclIO.c (CopyData): Allow the total number of bytes copied
	by [fcopy] to exceed 2GB. Can happen when no -size parameter given.

2010-03-18  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclListObj.c: [Bug 2971669]: Prevent in overflow trouble in
	* generic/tclTestObj.c: ListObjReplace operations.  Thanks to kbk for
	* tests/listObj.test:   fix and test.

2010-03-12  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/makefile.vc:      Fix [Bug 2967340]: Static build failure
	* win/.cvsignore

2010-03-09  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIORChan.c: [Bug 2936225]: Thanks to Alexandre Ferrieux
	* doc/refchan.n:	<ferrieux@users.sourceforge.net> for debugging
	* tests/ioCmd.test:	and fixing the problem. It is the write-side
				equivalent to the bug fixed 2009-08-06.

2010-03-09  Don Porter  <dgp@users.sourceforge.net>

	* library/tzdata/America/Matamoros: New locale
	* library/tzdata/America/Ojinaga: New locale
	* library/tzdata/America/Santa_Isabel: New locale
	* library/tzdata/America/Asuncion:
	* library/tzdata/America/Tijuana:
	* library/tzdata/Antarctica/Casey:
	* library/tzdata/Antarctica/Davis:
	* library/tzdata/Antarctica/Mawson:
	* library/tzdata/Asia/Dhaka:
	* library/tzdata/Pacific/Fiji:
	Olson tzdata2010c.

2010-03-01  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* unix/tclUnixChan.c: [backported] Refrain from a possibly lengthy
	reverse-DNS lookup on 0.0.0.0 when calling [fconfigure -sockname]
	on an universally-bound (default) server socket.

2010-02-27  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclCmdMZ.c (StringFirstCmd, StringLastCmd): [Bug 2960021]:
	Only search for the needle in the haystack when the needle isn't
	larger than the haystack. Prevents an odd crash from sometimes
	happening when things get mixed up (a common programming error).

2010-02-21  Jan Nijtmans  <nijtmans@users.sf.net>
