@@ -1,3 +1,8 @@
+2010-03-24  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclResult.c:	[Bug 2383005] Revise [return -errorcode] so
+	* tests/result.test:	that it rejects illegal non-list values.
+
 2010-03-20  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclIO.c (CopyData): Allow the total number of bytes copied
